archived/manifests-ace/argo-projects/argo-workflows.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: argo-workflows
---
apiVersion: v1
kind: Namespace
metadata:
  name: workflows
# ---
# apiVersion: external-secrets.io/v1beta1
# kind: ExternalSecret
# metadata:
#   name: sso
#   namespace: argocd
#   labels:
#     app.kubernetes.io/part-of: argocd
# spec:
#   refreshInterval: "5m"
#   secretStoreRef:
#     kind: ClusterSecretStore
#     name: 1password
#   target:
#     creationPolicy: Owner
#   data:
#     - secretKey: token
#       remoteRef:
#         key: sso
#         property: argocd
---
apiVersion: v1
kind: Service
metadata:
  name: workflows-extname
  annotations:
    external-dns.alpha.kubernetes.io/hostname: workflows.<path:stringreplacesecret#domain>
    external-dns.alpha.kubernetes.io/ttl: "300"
spec:
  type: ExternalName
  externalName: nginx.<path:stringreplacesecret#domain>
  sessionAffinity: None
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: argo-workflows
  namespace: argo-workflows
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-production
    kubernetes.io/ingress.class: nginx
    kubernetes.io/tls-acme: 'true'
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - workflows.<path:stringreplacesecret#domain>
    secretName: workflows-cert
  rules:
  - host: workflows.<path:stringreplacesecret#domain>
    http:
      paths:
      - backend:
          service:
            name: argo-workflows-server
            port:
              number: 2746
        path: /
        pathType: Prefix
